--- a/app/less/custom.less
+++ b/app/less/custom.less
@@ -32,6 +32,11 @@ body {
   .make-md-column(7);
 
   #meme-window {
+    // Blurry canvas fix
+    position: absolute;
+    top: 20px;
+    right: 25px;
+    
     color: black;
     background: #72CDF4;
     background-size: cover;
